routing working with number of slider selectors varrying depending on number of times

--- a/style.css
+++ b/style.css
@@ -111,3 +111,9 @@ p{margin-bottom:.3em;}
     text-align: center;
     font-family: sans-serif;
 }
+
+.consistency{
+
+    height: 200px;
+    width: 200px;
+}
