--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+*{
+    border: 1px solid red;
+}
+
 html, body{
     height: 100%;
     width: 100%;
     margin: 0;
     font-family: sans-serif;
+}
+.the-faces{
+    min-width: 240px;
+    margin: 10% 0 0 33%;
+    max-width: 240px;
 }
 
 .header{
@@ -74,12 +83,17 @@ p{margin-bottom:.3em;}
     text-align: center;
 }
 
+
+
 .submit{
-    margin: 10% 0 0 0;
+    margin: 10% 0 0 33%;
     height: 30px;
     width: 33%;
     font-family: sans-serif;
     font-size: 20px;
+    min-width: 80px;
+    text-align: center;
+
 }
 
 .question{
@@ -87,6 +101,7 @@ p{margin-bottom:.3em;}
     font-size: 30px;
     color: darkblue;
     margin-bottom: 10%;
+    text-align: center;
 }
 
 .consistency{
@@ -113,7 +128,9 @@ p{margin-bottom:.3em;}
 }
 
 .consistency{
-
+    margin: 5% 33% 0 33%;
     height: 200px;
-    width: 200px;
+    width: 33%;
+    display: block;
+    min-width: 212px;
 }
