--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ p{margin-bottom:.3em;}
 }
 
 .consistency{
-    margin: 5% 33% 0 33%;
+    margin: 5% 0 0 33%;
     height: 150px;
     width: 33%;
     display: block;
@@ -156,14 +156,12 @@ p{margin-bottom:.3em;}
     .consistency{
         width: 89%;
         height: 25px;
-        margin: 5% 0 5% 33%;
-        border: 1px solid black;
+        margin: 5% 0 5% 25%;
 
     }
 
     .question{
         font-size: 80px;
-        border: 1px solid black;
 
     }
     .submit{
@@ -205,4 +203,72 @@ p{margin-bottom:.3em;}
     }
 }
 
+input[type=range] {
+    /*removes default webkit styles*/
+    -webkit-appearance: none;
 
+    /*fix for FF unable to apply focus style bug */
+    border: 1px solid white;
+
+    /*required for proper track sizing in FF*/
+    width: 300px;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 300px;
+    height: 50px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 60px;
+    width: 16px;
+    background: black;
+    margin-top:-5px;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+}
+
+input[type=range]::-moz-range-track {
+    width: 300px;
+    height: 5px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
+input[type=range]::-moz-range-thumb {
+    border: none;
+    height: 16px;
+    width: 40px;
+    background: black;
+}
+
+/*hide the outline behind the border*/
+input[type=range]:-moz-focusring{
+    outline: 1px solid white;
+    outline-offset: -1px;
+}
+
+input[type=range]::-ms-track {
+    width: 300px;
+    height: 50px;
+
+    /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
+    background: transparent;
+
+    /*leave room for the larger thumb to overflow with a transparent border */
+    border-color: transparent;
+    border-width: 6px 0;
+
+    /*remove default tick marks*/
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #777;
+    border-radius: 10px;
