--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ html, body{
     font-family: sans-serif;
     background: #BCFFF5;
 }
+.timesChoice{
+    margin: 10% 0 10% 33%;
+}
+.timesContain{
+    width: 33%;
+    height: 200px;
+    margin: 0 0 0 33%;
+}
 .the-faces{
     min-width: 300px;
     margin: 5% 0 0 33%;
@@ -286,8 +294,36 @@ input[type=range]::-ms-fill-lower {
 
 .loginSubmit{
     height: 30px;
-    width: 70px;
+    width: 90px;
     border-radius: 5px;
     font-size: 18px;
     background: #93FF98;
+}
+
+.chart {
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    margin: 60px auto;
+    position: relative;
+}
+
+.y {
+    position: absolute;
+    transform: rotate(-90deg);
+    transform-origin: bottom left;
+    bottom: 0;
+    padding: 5px;
+}
+
+.x {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    padding: 5px;
+}
+
+.bar {
+    background: blue;
+    position: absolute;
+    bottom: 0;
 }
